cabal-version:      2.4
name:               gettext-th
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Christoph Bauer
maintainer:         mail@christoph-bauer.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  I18N.Gettext.TH

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base 
                    , bytestring
                    , directory
                    , filepath
                    , haskell-gettext
                    , template-haskell
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -fwarn-tabs
    default-extensions: TemplateHaskell, TupleSections, DeriveLift, RecordWildCards, QuasiQuotes, OverloadedStrings, FlexibleContexts
